--- a/mini-app/.github/workflows/ci-cd.yml
+++ b/mini-app/.github/workflows/ci-cd.yml
@@ -70,7 +70,7 @@ jobs:
 
   deploy-dev:
     needs: build
-    if: github.event_name == 'pull_request' && startsWith(github.head_ref, 'feature/')
+    if: github.event_name == 'pull_request' && startsWith(github.ref_name, 'feature/')
     runs-on: ubuntu-latest
     environment: develop
     concurrency:
